Fixed CSS not showing on admin, hidden acf labels for groups with "acf-hide-label" class

--- a/assets/rs-utility-blocks.css
+++ b/assets/rs-utility-blocks.css
@@ -1,6 +1,7 @@
 /* ACF custom classes */
 .acf-field.acf-hide-label > .acf-label,
-.acf-field.acf-hide-label.acf-field-clone .acf-clone-fields > .acf-field > .acf-label {
+.acf-field.acf-hide-label.acf-field-clone .acf-clone-fields > .acf-field > .acf-label,
+.acf-field.acf-hide-label.acf-field-group > .acf-input > .acf-fields > .acf-field > .acf-label {
 	display: none;
 }
 
